--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "@mui/material": "^5.18.0",
     "@mui/x-date-pickers": "^6.20.2",
     "autoprefixer": "^10.4.16",
+    "axios": "^1.11.0",
     "date-fns": "^2.30.0",
     "postcss": "^8.4.31",
     "react": "^18.2.0",
