--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,7 @@
     "react-big-calendar": "^1.19.4",
     "react-dom": "^18.2.0",
     "react-quill": "^2.0.0",
+    "react-router-dom": "^6.30.1",
     "tailwindcss": "^3.4.3"
   },
   "devDependencies": {
