--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,7 @@
     "react": "^18.2.0",
     "react-big-calendar": "^1.19.4",
     "react-dom": "^18.2.0",
+  "recharts": "^2.5.0",
     "react-quill": "^2.0.0",
     "react-router-dom": "^6.30.1",
     "tailwindcss": "^3.4.3"
