--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,13 +19,14 @@
     "autoprefixer": "^10.4.16",
     "axios": "^1.11.0",
     "date-fns": "^2.30.0",
+    "dompurify": "^3.2.7",
     "postcss": "^8.4.31",
     "react": "^18.2.0",
     "react-big-calendar": "^1.19.4",
     "react-dom": "^18.2.0",
-  "recharts": "^2.5.0",
     "react-quill": "^2.0.0",
     "react-router-dom": "^6.30.1",
+    "recharts": "^2.5.0",
     "tailwindcss": "^3.4.3"
   },
   "devDependencies": {
