--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,15 +27,15 @@
     "react-quill": "^2.0.0",
     "react-router-dom": "^6.30.1",
     "recharts": "^2.5.0",
-    "tailwindcss": "^3.4.3"
+    "tailwindcss": "^3.4.3",
+    "@vitejs/plugin-react": "^5.0.0",
+    "vite": "^7.1.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
-    "@vitejs/plugin-react": "^5.0.0",
     "eslint": "^9.33.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
-    "globals": "^16.3.0",
-    "vite": "^7.1.2"
+    "globals": "^16.3.0"
   }
 }
