--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -1,5 +1,7 @@
 {
   "version": 2,
+  "installCommand": "npm ci --include=dev || npm install --include=dev",
+  "buildCommand": "npm run build",
   "builds": [
     {
       "src": "package.json",
