--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,7 @@
 {
   "version": 2,
-  "installCommand": "npm ci --include=dev || npm install --include=dev",
-  "buildCommand": "npm run build",
+  "installCommand": "cd frontend && npm ci --include=dev || (cd frontend && npm install --include=dev)",
+  "buildCommand": "cd frontend && npm run build",
   "builds": [
     {
       "src": "frontend/package.json",
