--- a/vercel.json
+++ b/vercel.json
@@ -1,15 +1,14 @@
 {
   "version": 2,
   "installCommand": "cd frontend && npm ci --include=dev || (cd frontend && npm install --include=dev)",
-  "buildCommand": "cd frontend && npm run build",
+  "buildCommand": "cd frontend && npm run build && rm -rf ../dist && cp -r dist ../dist",
   "builds": [
     {
-      "src": "frontend/package.json",
-      "use": "@vercel/static-build",
-      "config": { "distDir": "dist" }
+      "src": "dist",
+      "use": "@vercel/static"
     }
   ],
   "routes": [
-    { "src": "/(.*)", "dest": "/index.html" }
+    { "src": "(.*)", "dest": "/index.html" }
   ]
 }
