--- a/vercel.json
+++ b/vercel.json
@@ -1,11 +1,12 @@
 {
   "version": 2,
   "installCommand": "cd frontend && npm ci --include=dev || (cd frontend && npm install --include=dev)",
-  "buildCommand": "cd frontend && npm run build && rm -rf ../dist && cp -r dist ../dist",
+  "buildCommand": "cd frontend && npm run build",
   "builds": [
     {
-      "src": "dist",
-      "use": "@vercel/static"
+      "src": "frontend/package.json",
+      "use": "@vercel/static-build",
+      "config": { "distDir": "dist" }
     }
   ],
   "routes": [
